--- a/src/components/pages/search.pug
+++ b/src/components/pages/search.pug
@@ -10,13 +10,7 @@ block pageOption
 
 			},
 			{
-				text : "２階層",
-				link : "./index.html",
-				isCurrent : false
-
-			},
-			{
-				text : "ライフシーンで探す",
+				text : "選んで探す",
 				link : "",
 				isCurrent : true
 
