--- a/src/components/parts/_feature.pug
+++ b/src/components/parts/_feature.pug
@@ -6,18 +6,18 @@
       description: "説明が入ります説明が入ります説明が入ります説明が入ります説明が入ります説明が入ります説明が入ります",
       link: "#"
     },
-    {
-      imgPath: "pregnant_child_icon.png",
-      title: "防災特設サイトを公開しました",
-      description: "説明が入ります説明が入ります説明が入ります説明が入ります説明が入ります説明が入ります説明が入ります",
-      link: "#"
-    },
-    {
-      imgPath: "pregnant_child_icon.png",
-      title: "防災特設サイトを公開しました",
-      description: "説明が入ります説明が入ります説明が入ります説明が入ります説明が入ります説明が入ります説明が入ります",
-      link: "#"
-    },
+    //- {
+    //-   imgPath: "pregnant_child_icon.png",
+    //-   title: "防災特設サイトを公開しました",
+    //-   description: "説明が入ります説明が入ります説明が入ります説明が入ります説明が入ります説明が入ります説明が入ります",
+    //-   link: "#"
+    //- },
+    //- {
+    //-   imgPath: "pregnant_child_icon.png",
+    //-   title: "防災特設サイトを公開しました",
+    //-   description: "説明が入ります説明が入ります説明が入ります説明が入ります説明が入ります説明が入ります説明が入ります",
+    //-   link: "#"
+    //- },
   ]
 
 
