--- a/src/components/parts/_global-navi.pug
+++ b/src/components/parts/_global-navi.pug
@@ -9,11 +9,11 @@
       label: "事業者の方"
     },
     {
-      link: "/search.html",
+      link: "/",
       label: "観光・移住"
     },
     {
-      link: "/category-top.html",
+      link: "/",
       label: "市政について"
     },
 
