--- a/src/stylesheets/base/_base.scss
+++ b/src/stylesheets/base/_base.scss
@@ -4,9 +4,9 @@
 body {
 	background-color: #f1f6fa;
 	color: #3b4040;
-	line-height: 1.6;
+	line-height: 1.8;
 	vertical-align: baseline;
-	font-family: "BIZ UDGothic", sans-serif;
+	font-family: Arial, Helvetica, "Neue", Helvetica, "BIZ UDGothic", sans-serif;
 	font-size: 16px;
 }
 
