--- a/src/stylesheets/page/_category-top.scss
+++ b/src/stylesheets/page/_category-top.scss
@@ -53,15 +53,19 @@
 			background-color: #fff;
 			position: relative;
 		}
+		&__radio {
+			flex-basis: 80%;
+		}
 		&__count {
 			display: flex;
 			align-items: center;
 			justify-content: center;
+			flex-basis: 20%;
 			width: 32px;
 			padding-right: 4px;
 			.count {
-				width: 26px;
-				height: auto;
+				width: 30px;
+				height: 30px;
 				padding: 4px 4px;
 				text-align: center;
 				font-size: 12px;
