fix: イベントヒーロー画像修正

--- a/src/components/parts/_slider.pug
+++ b/src/components/parts/_slider.pug
@@ -1,3 +1,10 @@
 .section-content__carousel
-  img(src="../../images/top/top_hero_event_1.png" alt="7/20 大黒市にリニアが開通しました！" class="carousel-img")
-  img(src="../../images/top/top_hero_event_1.png" alt="7/20 大黒市にリニアが開通しました！" class="carousel-img")
+  .slide 
+    picture
+      source(media="(max-width:960px)" srcset="../../images/top/top_hero_event_sp.jpg")
+      img(src="../../images/top/top_hero_event_1.png" alt="7/20 大黒市にリニアが開通しました！" class="slider-img")
+
+  .slide 
+    picture
+      source(media="(max-width:960px)" srcset="../../images/top/top_hero_event_sp.jpg")
+      img(src="../../images/top/top_hero_event_1.png" alt="7/20 大黒市にリニアが開通しました！" class="slider-img")
