fix: 検索結果からタグなど削除

--- a/src/components/pages/category-top.pug
+++ b/src/components/pages/category-top.pug
@@ -130,7 +130,55 @@ block pageOption
             label: "妊娠・出産に関する金銭的支援",
           },
         ],
-        text: "本文です本文です本文です本文です本文です本文です本文です",
+        text: "本文小さめサイズです親譲りの無鉄砲で小供の時から損ばかりしている。小学校に居る時分学校の二階から飛び降りて一週間ほど腰を抜かした事がある。なぜそんな無闇をしたと聞く人があるかも知れぬ本文小さめサイズです親譲りの無鉄砲で小供の時から損ばかりしている。小学校に居る時分学校の二階から飛び降りて一週間ほど腰を抜かした事がある。なぜそんな無闇をしたと聞く人があるかも知れぬ",
+        summary: "概要です概要です概要です概要です概要です概要です概要です概要です",
+        application: "申込です申込です申込です申込です申込です申込です申込です申込です申込です",
+        link: "./detail.html",
+        isNew: true,
+      },
+      {
+        title: "特定不妊治療費助成",
+        categories: [
+          {
+            label: "金銭的支援",
+          },
+          {
+            label: "妊娠・出産に関する金銭的支援",
+          },
+        ],
+        text: "本文小さめサイズです親譲りの無鉄砲で小供の時から損ばかりしている。小学校に居る時分学校の二階から飛び降りて一週間ほど腰を抜かした事がある。なぜそんな無闇をしたと聞く人があるかも知れぬ本文小さめサイズです親譲りの無鉄砲で小供の時から損ばかりしている。小学校に居る時分学校の二階から飛び降りて一週間ほど腰を抜かした事がある。なぜそんな無闇をしたと聞く人があるかも知れぬ",
+        summary: "概要です概要です概要です概要です概要です概要です概要です概要です",
+        application: "申込です申込です申込です申込です申込です申込です申込です申込です申込です",
+        link: "./detail.html",
+        isNew: true,
+      },
+      {
+        title: "特定不妊治療費助成",
+        categories: [
+          {
+            label: "金銭的支援",
+          },
+          {
+            label: "妊娠・出産に関する金銭的支援",
+          },
+        ],
+        text: "本文小さめサイズです親譲りの無鉄砲で小供の時から損ばかりしている。小学校に居る時分学校の二階から飛び降りて一週間ほど腰を抜かした事がある。なぜそんな無闇をしたと聞く人があるかも知れぬ本文小さめサイズです親譲りの無鉄砲で小供の時から損ばかりしている。小学校に居る時分学校の二階から飛び降りて一週間ほど腰を抜かした事がある。なぜそんな無闇をしたと聞く人があるかも知れぬ",
+        summary: "概要です概要です概要です概要です概要です概要です概要です概要です",
+        application: "申込です申込です申込です申込です申込です申込です申込です申込です申込です",
+        link: "./detail.html",
+        isNew: true,
+      },
+      {
+        title: "特定不妊治療費助成",
+        categories: [
+          {
+            label: "金銭的支援",
+          },
+          {
+            label: "妊娠・出産に関する金銭的支援",
+          },
+        ],
+        text: "本文小さめサイズです親譲りの無鉄砲で小供の時から損ばかりしている。小学校に居る時分学校の二階から飛び降りて一週間ほど腰を抜かした事がある。なぜそんな無闇をしたと聞く人があるかも知れぬ本文小さめサイズです親譲りの無鉄砲で小供の時から損ばかりしている。小学校に居る時分学校の二階から飛び降りて一週間ほど腰を抜かした事がある。なぜそんな無闇をしたと聞く人があるかも知れぬ",
         summary: "概要です概要です概要です概要です概要です概要です概要です概要です",
         application: "申込です申込です申込です申込です申込です申込です申込です申込です申込です",
         link: "./detail.html",
@@ -162,55 +210,7 @@ block pageOption
             label: "妊娠・出産に関する金銭的支援",
           },
         ],
-        text: "本文です本文です本文です本文です本文です本文です本文です",
-        summary: "概要です概要です概要です概要です概要です概要です概要です概要です",
-        application: "申込です申込です申込です申込です申込です申込です申込です申込です申込です",
-        link: "./detail.html",
-        isNew: true,
-      },
-      {
-        title: "特定不妊治療費助成",
-        categories: [
-          {
-            label: "金銭的支援",
-          },
-          {
-            label: "妊娠・出産に関する金銭的支援",
-          },
-        ],
-        text: "本文です本文です本文です本文です本文です本文です本文です",
-        summary: "概要です概要です概要です概要です概要です概要です概要です概要です",
-        application: "申込です申込です申込です申込です申込です申込です申込です申込です申込です",
-        link: "./detail.html",
-        isNew: true,
-      },
-      {
-        title: "特定不妊治療費助成",
-        categories: [
-          {
-            label: "金銭的支援",
-          },
-          {
-            label: "妊娠・出産に関する金銭的支援",
-          },
-        ],
-        text: "本文です本文です本文です本文です本文です本文です本文です",
-        summary: "概要です概要です概要です概要です概要です概要です概要です概要です",
-        application: "申込です申込です申込です申込です申込です申込です申込です申込です申込です",
-        link: "./detail.html",
-        isNew: true,
-      },
-      {
-        title: "特定不妊治療費助成",
-        categories: [
-          {
-            label: "金銭的支援",
-          },
-          {
-            label: "妊娠・出産に関する金銭的支援",
-          },
-        ],
-        text: "本文です本文です本文です本文です本文です本文です本文です",
+        text: "本文小さめサイズです親譲りの無鉄砲で小供の時から損ばかりしている。小学校に居る時分学校の二階から飛び降りて一週間ほど腰を抜かした事がある。なぜそんな無闇をしたと聞く人があるかも知れぬ本文小さめサイズです親譲りの無鉄砲で小供の時から損ばかりしている。小学校に居る時分学校の二階から飛び降りて一週間ほど腰を抜かした事がある。なぜそんな無闇をしたと聞く人があるかも知れぬ",
         summary: "概要です概要です概要です概要です概要です概要です概要です概要です",
         application: "申込です申込です申込です申込です申込です申込です申込です申込です申込です",
         link: "./detail.html",
@@ -226,7 +226,7 @@ block pageOption
             label: "妊娠・出産に関する金銭的支援",
           },
         ],
-        text: "本文です本文です本文です本文です本文です本文です本文です",
+        text: "本文小さめサイズです親譲りの無鉄砲で小供の時から損ばかりしている。小学校に居る時分学校の二階から飛び降りて一週間ほど腰を抜かした事がある。なぜそんな無闇をしたと聞く人があるかも知れぬ本文小さめサイズです親譲りの無鉄砲で小供の時から損ばかりしている。小学校に居る時分学校の二階から飛び降りて一週間ほど腰を抜かした事がある。なぜそんな無闇をしたと聞く人があるかも知れぬ",
         summary: "概要です概要です概要です概要です概要です概要です概要です概要です",
         application: "申込です申込です申込です申込です申込です申込です申込です申込です申込です",
         link: "./detail.html",
@@ -242,7 +242,7 @@ block pageOption
             label: "妊娠・出産に関する金銭的支援",
           },
         ],
-        text: "本文です本文です本文です本文です本文です本文です本文です",
+        text: "本文小さめサイズです親譲りの無鉄砲で小供の時から損ばかりしている。小学校に居る時分学校の二階から飛び降りて一週間ほど腰を抜かした事がある。なぜそんな無闇をしたと聞く人があるかも知れぬ本文小さめサイズです親譲りの無鉄砲で小供の時から損ばかりしている。小学校に居る時分学校の二階から飛び降りて一週間ほど腰を抜かした事がある。なぜそんな無闇をしたと聞く人があるかも知れぬ",
         summary: "概要です概要です概要です概要です概要です概要です概要です概要です",
         application: "申込です申込です申込です申込です申込です申込です申込です申込です申込です",
         link: "./detail.html",
@@ -258,7 +258,7 @@ block pageOption
             label: "妊娠・出産に関する金銭的支援",
           },
         ],
-        text: "本文です本文です本文です本文です本文です本文です本文です",
+        text: "本文小さめサイズです親譲りの無鉄砲で小供の時から損ばかりしている。小学校に居る時分学校の二階から飛び降りて一週間ほど腰を抜かした事がある。なぜそんな無闇をしたと聞く人があるかも知れぬ本文小さめサイズです親譲りの無鉄砲で小供の時から損ばかりしている。小学校に居る時分学校の二階から飛び降りて一週間ほど腰を抜かした事がある。なぜそんな無闇をしたと聞く人があるかも知れぬ",
         summary: "概要です概要です概要です概要です概要です概要です概要です概要です",
         application: "申込です申込です申込です申込です申込です申込です申込です申込です申込です",
         link: "./detail.html",
@@ -274,7 +274,7 @@ block pageOption
             label: "妊娠・出産に関する金銭的支援",
           },
         ],
-        text: "本文です本文です本文です本文です本文です本文です本文です",
+        text: "本文小さめサイズです親譲りの無鉄砲で小供の時から損ばかりしている。小学校に居る時分学校の二階から飛び降りて一週間ほど腰を抜かした事がある。なぜそんな無闇をしたと聞く人があるかも知れぬ本文小さめサイズです親譲りの無鉄砲で小供の時から損ばかりしている。小学校に居る時分学校の二階から飛び降りて一週間ほど腰を抜かした事がある。なぜそんな無闇をしたと聞く人があるかも知れぬ",
         summary: "概要です概要です概要です概要です概要です概要です概要です概要です",
         application: "申込です申込です申込です申込です申込です申込です申込です申込です申込です",
         link: "./detail.html",
@@ -290,7 +290,7 @@ block pageOption
             label: "妊娠・出産に関する金銭的支援",
           },
         ],
-        text: "本文です本文です本文です本文です本文です本文です本文です",
+        text: "本文小さめサイズです親譲りの無鉄砲で小供の時から損ばかりしている。小学校に居る時分学校の二階から飛び降りて一週間ほど腰を抜かした事がある。なぜそんな無闇をしたと聞く人があるかも知れぬ本文小さめサイズです親譲りの無鉄砲で小供の時から損ばかりしている。小学校に居る時分学校の二階から飛び降りて一週間ほど腰を抜かした事がある。なぜそんな無闇をしたと聞く人があるかも知れぬ",
         summary: "概要です概要です概要です概要です概要です概要です概要です概要です",
         application: "申込です申込です申込です申込です申込です申込です申込です申込です申込です",
         link: "./detail.html",
@@ -306,7 +306,7 @@ block pageOption
             label: "妊娠・出産に関する金銭的支援",
           },
         ],
-        text: "本文です本文です本文です本文です本文です本文です本文です",
+        text: "本文小さめサイズです親譲りの無鉄砲で小供の時から損ばかりしている。小学校に居る時分学校の二階から飛び降りて一週間ほど腰を抜かした事がある。なぜそんな無闇をしたと聞く人があるかも知れぬ本文小さめサイズです親譲りの無鉄砲で小供の時から損ばかりしている。小学校に居る時分学校の二階から飛び降りて一週間ほど腰を抜かした事がある。なぜそんな無闇をしたと聞く人があるかも知れぬ",
         summary: "概要です概要です概要です概要です概要です概要です概要です概要です",
         application: "申込です申込です申込です申込です申込です申込です申込です申込です申込です",
         link: "./detail.html",
@@ -322,7 +322,7 @@ block pageOption
             label: "妊娠・出産に関する金銭的支援",
           },
         ],
-        text: "本文です本文です本文です本文です本文です本文です本文です",
+        text: "本文小さめサイズです親譲りの無鉄砲で小供の時から損ばかりしている。小学校に居る時分学校の二階から飛び降りて一週間ほど腰を抜かした事がある。なぜそんな無闇をしたと聞く人があるかも知れぬ本文小さめサイズです親譲りの無鉄砲で小供の時から損ばかりしている。小学校に居る時分学校の二階から飛び降りて一週間ほど腰を抜かした事がある。なぜそんな無闇をしたと聞く人があるかも知れぬ",
         summary: "概要です概要です概要です概要です概要です概要です概要です概要です",
         application: "申込です申込です申込です申込です申込です申込です申込です申込です申込です",
         link: "./detail.html",
@@ -338,7 +338,55 @@ block pageOption
             label: "妊娠・出産に関する金銭的支援",
           },
         ],
-        text: "本文です本文です本文です本文です本文です本文です本文です",
+        text: "本文小さめサイズです親譲りの無鉄砲で小供の時から損ばかりしている。小学校に居る時分学校の二階から飛び降りて一週間ほど腰を抜かした事がある。なぜそんな無闇をしたと聞く人があるかも知れぬ本文小さめサイズです親譲りの無鉄砲で小供の時から損ばかりしている。小学校に居る時分学校の二階から飛び降りて一週間ほど腰を抜かした事がある。なぜそんな無闇をしたと聞く人があるかも知れぬ",
+        summary: "概要です概要です概要です概要です概要です概要です概要です概要です",
+        application: "申込です申込です申込です申込です申込です申込です申込です申込です申込です",
+        link: "./detail.html",
+        isNew: true,
+      },
+      {
+        title: "特定不妊治療費助成",
+        categories: [
+          {
+            label: "金銭的支援",
+          },
+          {
+            label: "妊娠・出産に関する金銭的支援",
+          },
+        ],
+        text: "本文小さめサイズです親譲りの無鉄砲で小供の時から損ばかりしている。小学校に居る時分学校の二階から飛び降りて一週間ほど腰を抜かした事がある。なぜそんな無闇をしたと聞く人があるかも知れぬ本文小さめサイズです親譲りの無鉄砲で小供の時から損ばかりしている。小学校に居る時分学校の二階から飛び降りて一週間ほど腰を抜かした事がある。なぜそんな無闇をしたと聞く人があるかも知れぬ",
+        summary: "概要です概要です概要です概要です概要です概要です概要です概要です",
+        application: "申込です申込です申込です申込です申込です申込です申込です申込です申込です",
+        link: "./detail.html",
+        isNew: true,
+      },
+      {
+        title: "特定不妊治療費助成",
+        categories: [
+          {
+            label: "金銭的支援",
+          },
+          {
+            label: "妊娠・出産に関する金銭的支援",
+          },
+        ],
+        text: "本文小さめサイズです親譲りの無鉄砲で小供の時から損ばかりしている。小学校に居る時分学校の二階から飛び降りて一週間ほど腰を抜かした事がある。なぜそんな無闇をしたと聞く人があるかも知れぬ本文小さめサイズです親譲りの無鉄砲で小供の時から損ばかりしている。小学校に居る時分学校の二階から飛び降りて一週間ほど腰を抜かした事がある。なぜそんな無闇をしたと聞く人があるかも知れぬ",
+        summary: "概要です概要です概要です概要です概要です概要です概要です概要です",
+        application: "申込です申込です申込です申込です申込です申込です申込です申込です申込です",
+        link: "./detail.html",
+        isNew: true,
+      },
+      {
+        title: "特定不妊治療費助成",
+        categories: [
+          {
+            label: "金銭的支援",
+          },
+          {
+            label: "妊娠・出産に関する金銭的支援",
+          },
+        ],
+        text: "本文小さめサイズです親譲りの無鉄砲で小供の時から損ばかりしている。小学校に居る時分学校の二階から飛び降りて一週間ほど腰を抜かした事がある。なぜそんな無闇をしたと聞く人があるかも知れぬ本文小さめサイズです親譲りの無鉄砲で小供の時から損ばかりしている。小学校に居る時分学校の二階から飛び降りて一週間ほど腰を抜かした事がある。なぜそんな無闇をしたと聞く人があるかも知れぬ本文です本文です本文です本文です本文です本文です本文です",
         summary: "概要です概要です概要です概要です概要です概要です概要です概要です",
         application: "申込です申込です申込です申込です申込です申込です申込です申込です申込です",
         link: "./detail.html",
@@ -370,55 +418,7 @@ block pageOption
             label: "妊娠・出産に関する金銭的支援",
           },
         ],
-        text: "本文です本文です本文です本文です本文です本文です本文です",
-        summary: "概要です概要です概要です概要です概要です概要です概要です概要です",
-        application: "申込です申込です申込です申込です申込です申込です申込です申込です申込です",
-        link: "./detail.html",
-        isNew: true,
-      },
-      {
-        title: "特定不妊治療費助成",
-        categories: [
-          {
-            label: "金銭的支援",
-          },
-          {
-            label: "妊娠・出産に関する金銭的支援",
-          },
-        ],
-        text: "本文です本文です本文です本文です本文です本文です本文です",
-        summary: "概要です概要です概要です概要です概要です概要です概要です概要です",
-        application: "申込です申込です申込です申込です申込です申込です申込です申込です申込です",
-        link: "./detail.html",
-        isNew: true,
-      },
-      {
-        title: "特定不妊治療費助成",
-        categories: [
-          {
-            label: "金銭的支援",
-          },
-          {
-            label: "妊娠・出産に関する金銭的支援",
-          },
-        ],
-        text: "本文です本文です本文です本文です本文です本文です本文です",
-        summary: "概要です概要です概要です概要です概要です概要です概要です概要です",
-        application: "申込です申込です申込です申込です申込です申込です申込です申込です申込です",
-        link: "./detail.html",
-        isNew: true,
-      },
-      {
-        title: "特定不妊治療費助成",
-        categories: [
-          {
-            label: "金銭的支援",
-          },
-          {
-            label: "妊娠・出産に関する金銭的支援",
-          },
-        ],
-        text: "本文です本文です本文です本文です本文です本文です本文です",
+        text: "本文で本文小さめサイズです親譲りの無鉄砲で小供の時から損ばかりしている。小学校に居る時分学校の二階から飛び降りて一週間ほど腰を抜かした事がある。なぜそんな無闇をしたと聞く人があるかも知れぬ本文小さめサイズです親譲りの無鉄砲で小供の時から損ばかりしている。小学校に居る時分学校の二階から飛び降りて一週間ほど腰を抜かした事がある。なぜそんな無闇をしたと聞く人があるかも知れぬす本文です本文です本文です本文です本文です本文です",
         summary: "概要です概要です概要です概要です概要です概要です概要です概要です",
         application: "申込です申込です申込です申込です申込です申込です申込です申込です申込です",
         link: "./detail.html",
@@ -434,7 +434,7 @@ block pageOption
             label: "妊娠・出産に関する金銭的支援",
           },
         ],
-        text: "本文です本文です本文です本文です本文です本文です本文です",
+        text: "本文小さめサイズです親譲りの無鉄砲で小供の時から損ばかりしている。小学校に居る時分学校の二階から飛び降りて一週間ほど腰を抜かした事がある。なぜそんな無闇をしたと聞く人があるかも知れぬ本文小さめサイズです親譲りの無鉄砲で小供の時から損ばかりしている。小学校に居る時分学校の二階から飛び降りて一週間ほど腰を抜かした事がある。なぜそんな無闇をしたと聞く人があるかも知れぬ本文です本文です本文です本文です本文です本文です本文です",
         summary: "概要です概要です概要です概要です概要です概要です概要です概要です",
         application: "申込です申込です申込です申込です申込です申込です申込です申込です申込です",
         link: "./detail.html",
@@ -450,7 +450,7 @@ block pageOption
             label: "妊娠・出産に関する金銭的支援",
           },
         ],
-        text: "本文です本文です本文です本文です本文です本文です本文です",
+        text: "本文小さめサイズです親譲りの無鉄砲で小供の時から損ばかりしている。小学校に居る時分学校の二階から飛び降りて一週間ほど腰を抜かした事がある。なぜそんな無闇をしたと聞く人があるかも知れぬ本文小さめサイズです親譲りの無鉄砲で小供の時から損ばかりしている。小学校に居る時分学校の二階から飛び降りて一週間ほど腰を抜かした事がある。なぜそんな無闇をしたと聞く人があるかも知れぬ",
         summary: "概要です概要です概要です概要です概要です概要です概要です概要です",
         application: "申込です申込です申込です申込です申込です申込です申込です申込です申込です",
         link: "./detail.html",
@@ -466,7 +466,7 @@ block pageOption
             label: "妊娠・出産に関する金銭的支援",
           },
         ],
-        text: "本文です本文です本文です本文です本文です本文です本文です",
+        text: "本文小さめサイズです親譲りの無鉄砲で小供の時から損ばかりしている。小学校に居る時分学校の二階から飛び降りて一週間ほど腰を抜かした事がある。なぜそんな無闇をしたと聞く人があるかも知れぬ本文小さめサイズです親譲りの無鉄砲で小供の時から損ばかりしている。小学校に居る時分学校の二階から飛び降りて一週間ほど腰を抜かした事がある。なぜそんな無闇をしたと聞く人があるかも知れぬ",
         summary: "概要です概要です概要です概要です概要です概要です概要です概要です",
         application: "申込です申込です申込です申込です申込です申込です申込です申込です申込です",
         link: "./detail.html",
@@ -482,7 +482,7 @@ block pageOption
             label: "妊娠・出産に関する金銭的支援",
           },
         ],
-        text: "本文です本文です本文です本文です本文です本文です本文です",
+        text: "本文小さめサイズです親譲りの無鉄砲で小供の時から損ばかりしている。小学校に居る時分学校の二階から飛び降りて一週間ほど腰を抜かした事がある。なぜそんな無闇をしたと聞く人があるかも知れぬ本文小さめサイズです親譲りの無鉄砲で小供の時から損ばかりしている。小学校に居る時分学校の二階から飛び降りて一週間ほど腰を抜かした事がある。なぜそんな無闇をしたと聞く人があるかも知れぬ",
         summary: "概要です概要です概要です概要です概要です概要です概要です概要です",
         application: "申込です申込です申込です申込です申込です申込です申込です申込です申込です",
         link: "./detail.html",
@@ -498,7 +498,7 @@ block pageOption
             label: "妊娠・出産に関する金銭的支援",
           },
         ],
-        text: "本文です本文です本文です本文です本文です本文です本文です",
+        text: "本文小さめサイズです親譲りの無鉄砲で小供の時から損ばかりしている。小学校に居る時分学校の二階から飛び降りて一週間ほど腰を抜かした事がある。なぜそんな無闇をしたと聞く人があるかも知れぬ本文小さめサイズです親譲りの無鉄砲で小供の時から損ばかりしている。小学校に居る時分学校の二階から飛び降りて一週間ほど腰を抜かした事がある。なぜそんな無闇をしたと聞く人があるかも知れぬ",
         summary: "概要です概要です概要です概要です概要です概要です概要です概要です",
         application: "申込です申込です申込です申込です申込です申込です申込です申込です申込です",
         link: "./detail.html",
@@ -514,7 +514,7 @@ block pageOption
             label: "妊娠・出産に関する金銭的支援",
           },
         ],
-        text: "本文です本文です本文です本文です本文です本文です本文です",
+        text: "本文小さめサイズです親譲りの無鉄砲で小供の時から損ばかりしている。小学校に居る時分学校の二階から飛び降りて一週間ほど腰を抜かした事がある。なぜそんな無闇をしたと聞く人があるかも知れぬ本文小さめサイズです親譲りの無鉄砲で小供の時から損ばかりしている。小学校に居る時分学校の二階から飛び降りて一週間ほど腰を抜かした事がある。なぜそんな無闇をしたと聞く人があるかも知れぬ",
         summary: "概要です概要です概要です概要です概要です概要です概要です概要です",
         application: "申込です申込です申込です申込です申込です申込です申込です申込です申込です",
         link: "./detail.html",
@@ -530,7 +530,7 @@ block pageOption
             label: "妊娠・出産に関する金銭的支援",
           },
         ],
-        text: "本文です本文です本文です本文です本文です本文です本文です",
+        text: "本文小さめサイズです親譲りの無鉄砲で小供の時から損ばかりしている。小学校に居る時分学校の二階から飛び降りて一週間ほど腰を抜かした事がある。なぜそんな無闇をしたと聞く人があるかも知れぬ本文小さめサイズです親譲りの無鉄砲で小供の時から損ばかりしている。小学校に居る時分学校の二階から飛び降りて一週間ほど腰を抜かした事がある。なぜそんな無闇をしたと聞く人があるかも知れぬ",
         summary: "概要です概要です概要です概要です概要です概要です概要です概要です",
         application: "申込です申込です申込です申込です申込です申込です申込です申込です申込です",
         link: "./detail.html",
@@ -546,7 +546,7 @@ block pageOption
             label: "妊娠・出産に関する金銭的支援",
           },
         ],
-        text: "本文です本文です本文です本文です本文です本文です本文です",
+        text: "本文小さめサイズです親譲りの無鉄砲で小供の時から損ばかりしている。小学校に居る時分学校の二階から飛び降りて一週間ほど腰を抜かした事がある。なぜそんな無闇をしたと聞く人があるかも知れぬ本文小さめサイズです親譲りの無鉄砲で小供の時から損ばかりしている。小学校に居る時分学校の二階から飛び降りて一週間ほど腰を抜かした事がある。なぜそんな無闇をしたと聞く人があるかも知れぬ",
         summary: "概要です概要です概要です概要です概要です概要です概要です概要です",
         application: "申込です申込です申込です申込です申込です申込です申込です申込です申込です",
         link: "./detail.html",
