--- a/src/components/pages/search-result.pug
+++ b/src/components/pages/search-result.pug
@@ -13,7 +13,7 @@ block pageOption
             label: "手当と助成",
           },
         ],
-        text: "本文です本文です本文です本文です本文です本文です本文です",
+        text: "本文小さめサイズです親譲りの無鉄砲で小供の時から損ばかりしている。小学校に居る時分学校の二階から飛び降りて一週間ほど腰を抜かした事がある。なぜそんな無闇をしたと聞く人があるかも知れぬ本文小さめサイズです親譲りの無鉄砲で小供の時から損ばかりしている。小学校に居る時分学校の二階から飛び降りて一週間ほど腰を抜かした事がある。なぜそんな無闇をしたと聞く人があるかも知れぬ",
         summary: "概要です概要です概要です概要です概要です概要です概要です概要です",
         application: "申込です申込です申込です申込です申込です申込です申込です申込です申込です",
         link: "./detail.html"
@@ -28,7 +28,7 @@ block pageOption
             label: "手当と助成",
           },
         ],
-        text: "本文です本文です本文です本文です本文です本文です本文です",
+        text: "本文小さめサイズです親譲りの無鉄砲で小供の時から損ばかりしている。小学校に居る時分学校の二階から飛び降りて一週間ほど腰を抜かした事がある。なぜそんな無闇をしたと聞く人があるかも知れぬ本文小さめサイズです親譲りの無鉄砲で小供の時から損ばかりしている。小学校に居る時分学校の二階から飛び降りて一週間ほど腰を抜かした事がある。なぜそんな無闇をしたと聞く人があるかも知れぬ",
         summary: "概要です概要です概要です概要です概要です概要です概要です概要です",
         application: "申込です申込です申込です申込です申込です申込です申込です申込です申込です",
         link: "./detail.html"
@@ -43,7 +43,7 @@ block pageOption
             label: "手当と助成",
           },
         ],
-        text: "本文です本文です本文です本文です本文です本文です本文です",
+        text: "本文小さめサイズです親譲りの無鉄砲で小供の時から損ばかりしている。小学校に居る時分学校の二階から飛び降りて一週間ほど腰を抜かした事がある。なぜそんな無闇をしたと聞く人があるかも知れぬ本文小さめサイズです親譲りの無鉄砲で小供の時から損ばかりしている。小学校に居る時分学校の二階から飛び降りて一週間ほど腰を抜かした事がある。なぜそんな無闇をしたと聞く人があるかも知れぬ",
         summary: "概要です概要です概要です概要です概要です概要です概要です概要です",
         application: "申込です申込です申込です申込です申込です申込です申込です申込です申込です",
       },
@@ -57,7 +57,7 @@ block pageOption
             label: "手当と助成",
           },
         ],
-        text: "本文です本文です本文です本文です本文です本文です本文です",
+        text: "本文小さめサイズです親譲りの無鉄砲で小供の時から損ばかりしている。小学校に居る時分学校の二階から飛び降りて一週間ほど腰を抜かした事がある。なぜそんな無闇をしたと聞く人があるかも知れぬ本文小さめサイズです親譲りの無鉄砲で小供の時から損ばかりしている。小学校に居る時分学校の二階から飛び降りて一週間ほど腰を抜かした事がある。なぜそんな無闇をしたと聞く人があるかも知れぬ",
         summary: "概要です概要です概要です概要です概要です概要です概要です概要です",
         application: "申込です申込です申込です申込です申込です申込です申込です申込です申込です",
       },
@@ -71,7 +71,7 @@ block pageOption
             label: "手当と助成",
           },
         ],
-        text: "本文です本文です本文です本文です本文です本文です本文です",
+        text: "本文小さめサイズです親譲りの無鉄砲で小供の時から損ばかりしている。小学校に居る時分学校の二階から飛び降りて一週間ほど腰を抜かした事がある。なぜそんな無闇をしたと聞く人があるかも知れぬ本文小さめサイズです親譲りの無鉄砲で小供の時から損ばかりしている。小学校に居る時分学校の二階から飛び降りて一週間ほど腰を抜かした事がある。なぜそんな無闇をしたと聞く人があるかも知れぬ",
         summary: "概要です概要です概要です概要です概要です概要です概要です概要です",
         application: "申込です申込です申込です申込です申込です申込です申込です申込です申込です",
       },
@@ -85,7 +85,7 @@ block pageOption
             label: "手当と助成",
           },
         ],
-        text: "本文です本文です本文です本文です本文です本文です本文です",
+        text: "本文小さめサイズです親譲りの無鉄砲で小供の時から損ばかりしている。小学校に居る時分学校の二階から飛び降りて一週間ほど腰を抜かした事がある。なぜそんな無闇をしたと聞く人があるかも知れぬ本文小さめサイズです親譲りの無鉄砲で小供の時から損ばかりしている。小学校に居る時分学校の二階から飛び降りて一週間ほど腰を抜かした事がある。なぜそんな無闇をしたと聞く人があるかも知れぬ",
         summary: "概要です概要です概要です概要です概要です概要です概要です概要です",
         application: "申込です申込です申込です申込です申込です申込です申込です申込です申込です",
       },
@@ -99,7 +99,7 @@ block pageOption
             label: "手当と助成",
           },
         ],
-        text: "本文です本文です本文です本文です本文です本文です本文です",
+        text: "本文小さめサイズです親譲りの無鉄砲で小供の時から損ばかりしている。小学校に居る時分学校の二階から飛び降りて一週間ほど腰を抜かした事がある。なぜそんな無闇をしたと聞く人があるかも知れぬ本文小さめサイズです親譲りの無鉄砲で小供の時から損ばかりしている。小学校に居る時分学校の二階から飛び降りて一週間ほど腰を抜かした事がある。なぜそんな無闇をしたと聞く人があるかも知れぬ",
         summary: "概要です概要です概要です概要です概要です概要です概要です概要です",
         application: "申込です申込です申込です申込です申込です申込です申込です申込です申込です",
       },
@@ -113,7 +113,7 @@ block pageOption
             label: "手当と助成",
           },
         ],
-        text: "本文です本文です本文です本文です本文です本文です本文です",
+        text: "本文小さめサイズです親譲りの無鉄砲で小供の時から損ばかりしている。小学校に居る時分学校の二階から飛び降りて一週間ほど腰を抜かした事がある。なぜそんな無闇をしたと聞く人があるかも知れぬ本文小さめサイズです親譲りの無鉄砲で小供の時から損ばかりしている。小学校に居る時分学校の二階から飛び降りて一週間ほど腰を抜かした事がある。なぜそんな無闇をしたと聞く人があるかも知れぬ",
         summary: "概要です概要です概要です概要です概要です概要です概要です概要です",
         application: "申込です申込です申込です申込です申込です申込です申込です申込です申込です",
       },
@@ -127,7 +127,7 @@ block pageOption
             label: "手当と助成",
           },
         ],
-        text: "本文です本文です本文です本文です本文です本文です本文です",
+        text: "本文小さめサイズです親譲りの無鉄砲で小供の時から損ばかりしている。小学校に居る時分学校の二階から飛び降りて一週間ほど腰を抜かした事がある。なぜそんな無闇をしたと聞く人があるかも知れぬ本文小さめサイズです親譲りの無鉄砲で小供の時から損ばかりしている。小学校に居る時分学校の二階から飛び降りて一週間ほど腰を抜かした事がある。なぜそんな無闇をしたと聞く人があるかも知れぬ",
         summary: "概要です概要です概要です概要です概要です概要です概要です概要です",
         application: "申込です申込です申込です申込です申込です申込です申込です申込です申込です",
       },
@@ -141,7 +141,7 @@ block pageOption
             label: "手当と助成",
           },
         ],
-        text: "本文です本文です本文です本文です本文です本文です本文です",
+        text: "本文小さめサイズです親譲りの無鉄砲で小供の時から損ばかりしている。小学校に居る時分学校の二階から飛び降りて一週間ほど腰を抜かした事がある。なぜそんな無闇をしたと聞く人があるかも知れぬ本文小さめサイズです親譲りの無鉄砲で小供の時から損ばかりしている。小学校に居る時分学校の二階から飛び降りて一週間ほど腰を抜かした事がある。なぜそんな無闇をしたと聞く人があるかも知れぬ",
         summary: "概要です概要です概要です概要です概要です概要です概要です概要です",
         application: "申込です申込です申込です申込です申込です申込です申込です申込です申込です",
       },
