fix: spハンバーガーメニュー実装

--- a/src/components/pages/index.pug
+++ b/src/components/pages/index.pug
@@ -10,8 +10,8 @@ block content
 	//- section.section-content
 	//- 	include ../parts/_hero.pug
 
-	section.section-content
-		include ../parts/_slider.pug
+	//- section.section-content
+	//- 	include ../parts/_slider.pug
 
 	section.section-content 
 		include ../parts/_top-menu.pug
