--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -9,6 +9,7 @@
 @import "base/checkbox";
 @import "base/radio";
 @import "base/button";
+@import "base/link-btn";
 @import "base/textfield";
 @import "base/textarea";
 @import "base/breadcrumb";
