--- a/src/stylesheets/common/_accessibility.scss
+++ b/src/stylesheets/common/_accessibility.scss
@@ -126,7 +126,10 @@
 
 @media (max-width: breakpoint(sp)) {
 	.accessibility {
-		display: none;
+		margin: 16px 0;
+		display: flex;
+		flex-direction: column;
+		gap: 16px;
 	}
 	.select-language,
 	.select-font-size,
@@ -138,13 +141,17 @@
 	.select-language {
 		padding: 12px 9px;
 		background-color: #fff;
+		&__default {
+			display: flex;
+			justify-content: space-between;
+		}
 	}
 	.select-font-size,
 	.select-color {
 		.title {
-			width: 130px;
+			width: 100%;
 			min-width: 130px;
-			padding: 12px 9px;
+			padding: 16px 8px;
 		}
 		.select-list {
 			flex-grow: 1;
