fix: カテゴリトップのヘルプテキスト追加

--- a/src/components/pages/category-top.pug
+++ b/src/components/pages/category-top.pug
@@ -570,6 +570,11 @@ block content
   section.section-content__header
     +Banner({
       title: "妊娠から子育て",
+      description: `${breadcrumbItem.length}件の新着情報があります`,
+      help: {
+        text: "新着表記について",
+        link: "/"
+      },
       icon: "pregnant_child_icon.png"
     })
 
