--- a/src/components/base/Banner.pug
+++ b/src/components/base/Banner.pug
@@ -1,9 +1,15 @@
 mixin Banner(params={})
   - const props = Object.assign({}, params)
   .banner
-    h1.banner__label(aria-describedby="banner-desc")
+    h1.banner__title(aria-describedby="banner-desc")
       = props.title
-    if props.description
-      p.banner__description#banner-desc
-        = props.description
+    .banner__text
+      if props.description
+        p.banner__description#banner-desc
+          = props.description
+      if props.help
+        a.banner-help(href=props.help.link)
+          i(class="fas fa-question-circle")
+          p.banner-help__text 
+            = props.help.text
     img.banner__icon(src="../../images/common/" + props.icon alt="")
