--- a/src/stylesheets/common/_header.scss
+++ b/src/stylesheets/common/_header.scss
@@ -93,19 +93,22 @@
 		}
 		&__navi {
 			display: block;
-			margin-top: 0;
-			padding: 13px 22px 20px;
 			position: fixed;
-			height: 100vh;
 			width: 100%;
-			left: 0;
 			top: 68px;
+			left: 0;
+			margin-top: 0;
+			padding: 16px 24px 24px;
 			background-color: #f9f9fb;
 			overflow: hidden;
 			transition: 0.6s all ease-in-out;
-			transform: translateY(-150%);
+
+			&[aria-hidden="true"] {
+				height: 0;
+				transform: translateY(-150%);
+			}
 			&[aria-hidden="false"] {
-				opacity: 1;
+				height: 100vh;
 				transform: translateY(0);
 			}
 		}
@@ -133,31 +136,6 @@
 			background-color: colors(primary);
 			width: 70px;
 			height: 70px;
-			&__icon,
-			&__icon::before,
-			&__icon::after {
-				content: "";
-				display: block;
-				position: absolute;
-				z-index: 100;
-				top: 0;
-				left: 0;
-				bottom: 0;
-				width: 32px;
-				height: 3px;
-				background: #fff;
-				cursor: pointer;
-			}
-			&__icon {
-				left: -16px;
-			}
-			&__icon::before {
-				top: 10px;
-			}
-			&__icon::after {
-				top: 20px;
-				width: 20px;
-			}
 			&__text {
 				color: #fff;
 				font-size: 12px;
