--- a/src/components/base/Banner.pug
+++ b/src/components/base/Banner.pug
@@ -1,9 +1,10 @@
 mixin Banner(params={})
   - const props = Object.assign({}, params)
   .banner
-    h1.banner__label(aria-describedby="banner-desc")
+    h1.banner__title(aria-describedby="banner-desc")
       = props.title
     if props.description
       p.banner__description#banner-desc
         = props.description
-    img.banner__icon(src="../../images/common/" + props.icon alt="")
+    if props.icon
+      img.banner__icon(src="../../images/common/" + props.icon alt="")
