--- a/src/stylesheets/base/_base.scss
+++ b/src/stylesheets/base/_base.scss
@@ -42,6 +42,11 @@ body {
 		margin-top: 40px;
 		margin-bottom: 40px;
 	}
+	&__viewed {
+		@extend .layout-default;
+		margin-top: 40px;
+		margin-bottom: 40px;
+	}
 }
 .content-title {
 	font-size: 24px;
