feat: よくあるご質問リンク追加

--- a/src/components/parts/_top-menu-2.pug
+++ b/src/components/parts/_top-menu-2.pug
@@ -15,6 +15,11 @@
       icon: "organization_menu_icon.png",
       link: "#"
     },
+    {
+      text: "HPよくあるご質問",
+      icon: "question_menu_icon.png",
+      link: "#"
+    },
   ]
 
 include ../base/LinkMenu.pug	
