--- a/src/stylesheets/base/_link-menu.scss
+++ b/src/stylesheets/base/_link-menu.scss
@@ -1,6 +1,6 @@
 .link-menu {
 	@extend .box-shadow;
-	padding: 16px;
+	padding: 16px 8px;
 	background-color: #fff;
 	border-radius: 8px;
 	&:hover {
