--- a/src/stylesheets/base/_link-btn.scss
+++ b/src/stylesheets/base/_link-btn.scss
@@ -1,24 +1,29 @@
 .link-btn {
 	&__link {
 		display: flex;
-		flex-direction: column;
 		align-items: center;
 		justify-content: center;
 		gap: 8px;
 		color: #fff;
 		background-color: colors(primary);
-		padding: 16px 22px;
+		padding: 8px 32px;
 		border-radius: 50px;
 	}
 	&__label {
 		font-size: 12px;
+	}
+	&__icon {
+		width: 18px;
+		height: 18px;
 	}
 }
 
 @media (max-width: breakpoint(sp)) {
 	.link-btn {
 		&__link {
+			flex-direction: column;
 			border-radius: 0;
+			padding: 16px 24px;
 		}
 	}
 }
