--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -27,6 +27,7 @@
 @import "base/pagenation";
 @import "base/viewed-link";
 @import "base/chip";
+@import "base/switch-button";
 @import "common/accessibility";
 @import "common/header";
 @import "common/slick";
