--- a/src/stylesheets/common/_accessibility.scss
+++ b/src/stylesheets/common/_accessibility.scss
@@ -1,124 +1,117 @@
 .accessibility {
 	display: flex;
-	line-height: 1;
+	gap: 32px;
+	margin: 0 16px;
 
 	.select-list,
 	.select-language {
 		border: 1px solid #a6adc6;
 		border-radius: 4px;
 	}
-	& > * + * {
-		margin-left: 8px;
-	}
-}
-.select-language,
-.select-font-size,
-.select-color {
-	display: flex;
-	align-items: center;
-	overflow: hidden;
-	font-size: 14px;
-	color: #636b81;
-}
-.select-language {
-	select {
-		padding: 0 2px 0 13px;
-		line-height: 1.2;
-		transition: 0.2s all ease-in-out;
-		&:hover {
-			opacity: 0.8;
-			cursor: pointer;
-		}
-	}
-}
-
-.select-font-size,
-.select-color {
-	.title {
-		padding: 7px 8px 7px 16px;
-		height: 100%;
+	.select-language,
+	.select-color {
 		display: flex;
 		align-items: center;
+		gap: 8px;
+		overflow: hidden;
+		font-size: 14px;
+		color: #636b81;
 	}
-	.select-list {
-		display: flex;
-	}
-	.select-item {
-		padding: 7px 16px;
-		flex-grow: 1;
-		transition: 0.2s all ease-in-out;
-		&:hover {
-			opacity: 0.8;
-			cursor: pointer;
-		}
-
-		& + .select-item {
-			border-left: 1px solid #a6adc6;
-		}
-		label {
-			display: flex;
-			align-items: center;
-			justify-items: center;
-			height: 100%;
+	.select-language {
+		select {
+			padding: 0 2px 0 13px;
+			line-height: 1.2;
 			transition: 0.2s all ease-in-out;
 			&:hover {
 				opacity: 0.8;
 				cursor: pointer;
 			}
 		}
-		.text {
-			width: max-content;
-		}
 	}
-	input[type="radio"] {
-		display: none;
-		&:checked + .check-box {
-			background-color: #636b81;
+
+	.select-color {
+		.radio {
+			padding: 8px 16px 8px 40px;
 		}
-	}
-	.check-box {
-		transition: 0.2s all ease-in-out;
-		border: 1px solid #636b81;
-		width: 14px;
-		height: 14px;
-		background-color: #fff;
-		border-radius: 2px;
-		margin-right: 8px;
-		display: flex;
-		justify-content: center;
-		align-items: center;
-		color: #fff;
-		font-size: 10px;
-	}
-}
-.select-color {
-	.color-yellow {
-		background-color: #0000ff;
-		color: #ffff00;
-		.check-box {
-			border-color: #ffff00;
-			background-color: #0000ff;
-			color: #0000ff;
+		.title {
+			height: 100%;
+			display: flex;
+			align-items: center;
 		}
-		input[type="radio"] {
-			&:checked + .check-box {
-				background-color: #0000ff;
-				color: #ffff00;
+		.select-list {
+			display: flex;
+		}
+		.select-item {
+			flex-grow: 1;
+			transition: 0.2s all ease-in-out;
+			&:hover {
+				opacity: 0.8;
+				cursor: pointer;
+			}
+			& + .select-item {
+				border-left: 1px solid #a6adc6;
+			}
+			label {
+				display: flex;
+				align-items: center;
+				justify-items: center;
+				height: 100%;
+				transition: 0.2s all ease-in-out;
+				&:hover {
+					opacity: 0.8;
+					cursor: pointer;
+				}
+			}
+			.text {
+				width: max-content;
 			}
 		}
-	}
-	.color-white {
-		background-color: #000;
-		color: #fff;
-		.check-box {
-			border-color: #fff;
-			background-color: #000;
-			color: #000;
+		.color-black {
+			.radio {
+				&__input {
+					&:checked + .radio__label::before {
+						border-color: #cdd6dd;
+					}
+				}
+				&__label {
+					&::after {
+						background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='12' height='12' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='%23000'/%3e%3c/svg%3e");
+					}
+				}
+			}
 		}
-		input[type="radio"] {
-			&:checked + .check-box {
-				background-color: #000;
-				color: #fff;
+		.color-yellow {
+			background-color: #0000ff;
+			color: #ffff00;
+			.radio {
+				&__input {
+					&:checked + .radio__label::before {
+						border-color: #ffff00;
+						background-color: #0000ff;
+					}
+				}
+				&__label {
+					&::after {
+						background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='12' height='12' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='%23ffff00'/%3e%3c/svg%3e");
+					}
+				}
+			}
+		}
+		.color-white {
+			background-color: #000;
+			color: #fff;
+			.radio {
+				&__input {
+					&:checked + .radio__label::before {
+						border-color: #fff;
+						background-color: #000;
+					}
+				}
+				&__label {
+					&::after {
+						background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='12' height='12' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='%23fff'/%3e%3c/svg%3e");
+					}
+				}
 			}
 		}
 	}
@@ -129,43 +122,36 @@
 		margin: 16px 0;
 		display: flex;
 		flex-direction: column;
-		gap: 16px;
-	}
-	.select-language,
-	.select-font-size,
-	.select-color {
-		display: flex;
-		align-items: center;
-		overflow: hidden;
-	}
-	.select-language {
-		padding: 12px 9px;
-		background-color: #fff;
-		&__default {
+		gap: 24px;
+
+		.select-language,
+		.select-color {
 			display: flex;
-			justify-content: space-between;
+			align-items: center;
+			overflow: hidden;
 		}
-	}
-	.select-font-size,
-	.select-color {
-		.title {
-			width: 100%;
-			min-width: 130px;
-			padding: 16px 8px;
-		}
-		.select-list {
-			flex-grow: 1;
-		}
-		.select-item {
+		.select-language {
 			padding: 12px 9px;
-			display: flex;
-			justify-content: center;
+			background-color: #fff;
+			&__default {
+				display: flex;
+				justify-content: space-between;
+			}
 		}
-		.check-box {
-			width: 18px;
-			min-width: 18px;
-			height: 18px;
-			margin-right: 6px;
+		.select-color {
+			.title {
+				width: 100%;
+				padding: 16px 8px;
+				flex-basis: 20%;
+			}
+			.select-list {
+				flex-basis: 80%;
+			}
+			.select-item {
+				padding: 4px;
+				display: flex;
+				justify-content: center;
+			}
 		}
 	}
 }
